--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,11 @@
 spring.application.name=schedule
 
+#spring.datasource.url=jdbc:postgresql://172.20.7.53:5432/db2991_12
+#spring.datasource.username=st2991
+#spring.datasource.password=pwd2991
+#
+#spring.jpa.properties.hibernate.default_schema=schedule
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=root
