--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,9 @@ spring.application.name=schedule
 #
 #spring.jpa.properties.hibernate.default_schema=schedule
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.url=jdbc:postgresql://ep-spring-dust-a2bxysar.eu-central-1.aws.neon.tech/Diary?sslmode=require
+spring.datasource.username=Diary_owner
+spring.datasource.password=fiDY5nJ2SacX
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=validate
